Cambiar rocker por rbase en Dockerfile

--- a/pipeline/preprocess/Dockerfile
+++ b/pipeline/preprocess/Dockerfile
@@ -1,4 +1,4 @@
-FROM r-base:3.5.0
+FROM rocker/tidyverse:3.6.1
 
 WORKDIR /app
 
@@ -10,11 +10,8 @@ RUN apt-get update \
       libxml2-dev
 
 # R dependencies
-RUN install2.r --error --deps TRUE tidyverse
 RUN install2.r --error --deps TRUE lubridate
 RUN install2.r --error --deps TRUE feather
-RUN install2.r --error --deps TRUE magrittr
-RUN install2.r --error --deps TRUE Rcpp
 RUN install2.r --error --deps TRUE data.table
 RUN install2.r --error --deps TRUE aws.s3
 
